force-app/main/default/objects/SOE_Team_Member__c/SOE_Team_Member__c.object-meta.xml
<CustomObject>
    <label>SOE Team Member</label>
    <nameField>
        <displayFormat>SOET-{0000}</displayFormat>
        <label>SOE Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOE Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>