force-app/main/default/objects/SOE_Team_Member__c/fields/Default_Imp_Manager__c.field-meta.xml
<CustomField>
    <fullName>Default_Imp_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Imp Manager</label>
    <type>Checkbox</type>
</CustomField>