force-app/main/default/objects/SOE_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>SOE Team Members</relationshipLabel>
    <relationshipName>SOE_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>