force-app/main/default/objects/SOE_Team_Member__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>SOE Team Members</relationshipLabel>
    <relationshipName>SOE_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>