force-app/main/default/objects/SOE_Team_Member__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>SOE Team Members</relationshipLabel>
    <relationshipName>SOE_TeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>