force-app/main/default/objects/SOE_Team_Member__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <formula>Team_Member__r.Salesforce_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Id</label>
    <type>Text</type>
</CustomField>